; ModuleID = '/home/carl/AnghaBench/esp-idf/components/wpa_supplicant/src/crypto/extr_crypto_mbedtls.c_crypto_bignum_mod.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/wpa_supplicant/src/crypto/extr_crypto_mbedtls.c_crypto_bignum_mod.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.crypto_bignum = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @crypto_bignum_mod(%struct.crypto_bignum* %0, %struct.crypto_bignum* %1, %struct.crypto_bignum* %2) #0 {
  %4 = alloca %struct.crypto_bignum*, align 8
  %5 = alloca %struct.crypto_bignum*, align 8
  %6 = alloca %struct.crypto_bignum*, align 8
  store %struct.crypto_bignum* %0, %struct.crypto_bignum** %4, align 8
  store %struct.crypto_bignum* %1, %struct.crypto_bignum** %5, align 8
  store %struct.crypto_bignum* %2, %struct.crypto_bignum** %6, align 8
  %7 = load %struct.crypto_bignum*, %struct.crypto_bignum** %6, align 8
  %8 = bitcast %struct.crypto_bignum* %7 to i32*
  %9 = load %struct.crypto_bignum*, %struct.crypto_bignum** %4, align 8
  %10 = bitcast %struct.crypto_bignum* %9 to i32*
  %11 = load %struct.crypto_bignum*, %struct.crypto_bignum** %5, align 8
  %12 = bitcast %struct.crypto_bignum* %11 to i32*
  %13 = call i64 @mbedtls_mpi_mod_mpi(i32* %8, i32* %10, i32* %12)
  %14 = icmp ne i64 %13, 0
  %15 = zext i1 %14 to i64
  %16 = select i1 %14, i32 -1, i32 0
  ret i32 %16
}

declare dso_local i64 @mbedtls_mpi_mod_mpi(i32*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
